--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,33 +20,35 @@ B (255 */
 
 @layer base {
   :root {
-    --background: 216 100% 98.04%;
-    --foreground: 213.6 100% 4.9%;
+    --gradient: linear-gradient(to top left, #215f00, #e4e4d9);
+    --background: 105 100% 98.38%;
+    --foreground: 105 10% 0.76%;
 
-    --primary: 214.12 100% 50%;
-    --primary-foreground: 0 0% 100%;
+    --muted: 105 10% 91.9%;
+    --muted-foreground: 105 5% 41.9%;
 
-    --card: 216 100% 98.04%;
-    --card-foreground: 213.6 100% 4.9%;
+    --popover: 105 10% 91.9%;
+    --popover-foreground: 105 10% 0.95%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 213.6 100% 4.9%;
+    --card: 105 10% 91.9%;
+    --card-foreground: 105 10% 0.95%;
 
-    --secondary: 214.74 100% 92.55%;
-    --secondary-foreground: 216 100% 0.98%;
+    --border: 105 15% 89.76%;
+    --input: 105 15% 89.76%;
 
-    --muted: 213.6 100% 95.1%;
-    --muted-foreground: 0 0% 40%;
+    --primary: 105 100% 19%;
+    --primary-foreground: 105 2% 91.9%;
 
-    --accent: 213.6 100% 95.1%;
-    --accent-foreground: 214.12 100% 50%;
+    --secondary: 105 5% 95.95%;
+    --secondary-foreground: 105 7% 11.9%;
+
+    --accent: 105 5% 95.95%;
+    --accent-foreground: 105 7% 11.9%;
 
     --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
+    --destructive-foreground: 0 0% 98%;
 
-    --border: 0 0% 90.2%;
-    --input: 0 0% 90.2%;
-    --ring: 214.12 100% 50%;
+    --ring: 105 100% 19%;
 
     --radius: 0.5rem;
   }
@@ -57,36 +59,36 @@ B (255 */
        URL: https://gradient.page */
 
     /* CSS: .bg-gradient { background: var(--gradient) } */
-    --gradient: linear-gradient(to top left, #69eacb, #eaccf8, #6654f1);
+    --gradient: linear-gradient(to top left, #3ca55c, #b5ac49);
 
-    --background: 176 48.75% 5.36%;
-    --foreground: 176 7.5% 98.35%;
+    --background: 147 30.549999999999997% 3.52%;
+    --foreground: 147 4.699999999999999% 97.2%;
 
-    --muted: 176 37.5% 20.1%;
-    --muted-foreground: 176 7.5% 56.7%;
+    --muted: 147 23.5% 13.2%;
+    --muted-foreground: 147 4.699999999999999% 54.4%;
 
-    --popover: 176 50% 8.71%;
-    --popover-foreground: 176 7.5% 98.35%;
+    --popover: 147 55.6% 5.72%;
+    --popover-foreground: 147 4.699999999999999% 97.2%;
 
-    --card: 176 50% 8.71%;
-    --card-foreground: 176 7.5% 98.35%;
+    --card: 147 55.6% 5.72%;
+    --card-foreground: 147 4.699999999999999% 97.2%;
 
-    --border: 176 37.5% 20.1%;
-    --input: 176 37.5% 20.1%;
+    --border: 147 23.5% 13.2%;
+    --input: 147 23.5% 13.2%;
 
-    --primary: 176 75% 67%;
-    --primary-foreground: 176 7.5% 6.7%;
+    --primary: 147 47% 44%;
+    --primary-foreground: 147 4.699999999999999% 97.2%;
 
-    --secondary: 176 37.5% 20.1%;
-    --secondary-foreground: 176 7.5% 98.35%;
+    --secondary: 147 23.5% 13.2%;
+    --secondary-foreground: 147 4.699999999999999% 97.2%;
 
-    --accent: 176 37.5% 20.1%;
-    --accent-foreground: 176 7.5% 98.35%;
+    --accent: 147 23.5% 13.2%;
+    --accent-foreground: 147 4.699999999999999% 97.2%;
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 176 7.5% 98.35%;
+    --destructive-foreground: 147 4.699999999999999% 97.2%;
 
-    --ring: 176 75% 67%;
+    --ring: 147 47% 44%;
   }
 }
 
